2004-07-27  Thomas Vander Stichele  <thomas at apestaart dot org>

	* sys/ximage/ximagesink.c: (gst_ximagesink_check_xshm_calls),
	(gst_ximagesink_ximage_new), (gst_ximagesink_ximage_destroy):
	* sys/xvimage/xvimagesink.c: (gst_xvimagesink_check_xshm_calls),
	(gst_xvimagesink_xvimage_new), (gst_xvimagesink_xvimage_destroy),
	(gst_xvimagesink_xvimage_put):
	  further cleanups, logging, error handling and synchronizing

2004-07-27  Wim Taymans  <wim@fluendo.com>

	* gst/videomixer/videomixer.c: (gst_videomixer_pad_get_type),
	(gst_videomixer_pad_class_init), (gst_videomixer_pad_get_property),
	(gst_videomixer_pad_set_property),
	(gst_videomixer_pad_sinkconnect), (gst_videomixer_pad_init),
	(gst_video_mixer_background_get_type), (gst_videomixer_get_type),
	(gst_videomixer_class_init), (gst_videomixer_init),
	(gst_videomixer_getcaps), (gst_videomixer_request_new_pad),
	(gst_videomixer_blend_ayuv_i420), (pad_zorder_compare),
	(gst_videomixer_sort_pads), (gst_videomixer_fill_checker),
	(gst_videomixer_fill_color), (gst_videomixer_fill_queues),
	(gst_videomixer_blend_buffers), (gst_videomixer_update_queues),
	(gst_videomixer_loop), (plugin_init):
	Be a nicer negotiation citizen and provide a getcaps function on
	the srcpad. This also fixes a crash when resizing.

2004-07-27  Julien MOUTTE  <julien@moutte.net>

	* sys/xvimage/xvimagesink.c: (gst_xvimagesink_check_xshm_calls),
	(gst_xvimagesink_xvimage_new): Some fixes to image size calculation.

2004-07-27  Wim Taymans  <wim@fluendo.com>

	* ext/libpng/gstpngdec.c: (gst_pngdec_src_getcaps):
	* ext/libpng/gstpngenc.c: (gst_pngenc_class_init),
	(gst_pngenc_init), (gst_pngenc_chain), (gst_pngenc_get_property),
	(gst_pngenc_set_property):
	* ext/libpng/gstpngenc.h:
	Added snapshot property to pngenc.
	removed g_print from pngdec

2004-07-27  Steve Lhomme  <steve.lhomme@free.fr>

	* gst/ac3parse/ac3parse.vcproj
	* gst/adder/adder.vcproj
	* gst/alpha/alpha.vcproj
	* gst/alpha/alphacolor.vcproj
	* gst/asfdemux/asf.vcproj